public/huds/arie-hud1080/style.css
/* ... */
	.img-hor {
		-moz-transform: scaleX(-1);
		-o-transform: scaleX(-1);
		-webkit-transform: scaleX(-1);
		transform: scaleX(-1);
		filter: FlipH;
		-ms-filter: "FlipH";
	}

	.equip_bar>.bomb_defuse>img,
	.equip_bar>.bar_weapon>img,
	.hp_bar>.bar_weapon>img,
	.equip_bar>.hp_el>img {
		height: 75%;
		width: auto;	
		margin: auto;
		margin-top: 2px;
		margin-left:2px;
	}

	.hp_bar>.bar_weapon>img.invert {
		filter: drop-shadow(0.5px 0.5px 1px white) drop-shadow(-0.5px -0.5px 1px white) invert(70%);
	}

	.hp_bar>.bar_weapon>img.checked.invert {
		filter: drop-shadow(0.5px 0.5px 1px white) drop-shadow(-0.5px -0.5px 1px white) invert(100%);
	}

	#right>.player {
		float: right;
	}
	#header {
		width: 1500px;
	    height: 93.75px;
	    position: fixed;
	    top: 10;
	    left: 210px;
	}

	#match_tournament {
		width: 70%;
		margin: auto;
		margin-top: 5px;
	    padding: 16px 0 7px 0;	
		height: 9px;
		background: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0));
	}

	#match_teams {
		width: 100%;
		height: 93.25px;
		background: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0));
	}
	#team_name{
		text-shadow: 0 0 10px black;
	}

	#time_counter {
		font-size: 37.5px;
		font-weight: bold;
		width: 10%;
		height: 50%;
		margin: auto;
		text-align: center;
	}

	#round_counter {
		width: 50%;
	    height: 50%;
	    margin: auto;
	    color: #bec2c6;
	    font-size: 22.5px;
	    text-align: center;
	}

	.team_info {
		width: 45%;
		font-size:43.125px;
		font-weight: bold;
	}

	#team_1 {
		text-align:right;
		float: left;
		margin-left: -50px;
	}
	.ct-color{
		color:#73afd6;
	}
	.t-color{
		color:#f7bf16;
	}

	#team_2 {
		text-align: left;
		float: right;
		margin-right: -60px;
	}
	#team_score{
		margin-top:5px;
	}
	#team_1 > #team_name{
		margin-top:10px;
		float:right;
	}
	#avatar_container img {
		width:139px;
		height:139px;
		margin-top:1px;
		margin-left:1px;
	}

	#team_2 > #team_name{
		margin-top:10px;
		float:left;
	}
	#team_1 > #team_score{
		margin-right:10px;
		float:right;
	}
	#team_2 > #team_score{
		margin-left:10px;
		float:left;
	}
	#team_logo{
		position: relative;
		width:10%;
		height:100%;
		margin-right:20px;
		margin-left:20px;
	}
	#team_logo.empty{
		width:0%;
	}
	#team_logo > img{
		position: absolute;
		margin-top:8px;
		max-height: 80%;
		max-width: 100%;
		margin: auto;
		top: 0;
		left: 0;
		right: 0;
		bottom: 0;
		filter: drop-shadow(3px 3px 4px black);
		
	}
	#team_1>#team_logo{
		float:right;
	}
	#team_2>#team_logo{
		float:left;
	}
	#flash-container {
		position: fixed;
		bottom: 0px;
		
		font-family: 'Saira Semi Condensed', sans-serif;
		left: 50%;
		margin-left: -550px;
		height: 420px;
		width: 1100px;
		/*transform: skewX(40deg);*/
	}
	#match_tournament > div{
		line-height: 0px;
	}
	#match_one_info{
		float:left;
		width:35%;
		text-align:right;
		font-weight:600;
		font-size:18.75px;
		margin-left:20px;
	}
	#match_two_info{
		float:right;
		width:35%;
		text-align:left;
		font-weight:600;
		font-size:18.75px;
		margin-right:20px;
	}
	#match_info{
		margin:auto;
		width:30%;
		text-align:center;
		font-weight:500;
		font-size:20,625px;
	}
	#who_won{
		display: none;
		position: absolute;
		height: 80px;
		left: 210px;
		top: 150px;
		width: 1500px;
		text-align: center;
		font-size: 50px;
		background: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0))
	}
	#who_won div {
		display:inline-block;
	}

	#kd_bar {
		font-size:15px;
		width:104px;
	}

	#kd_bar span{
		margin-left:4px;
	}

	#left #kd_bar {
		float:left;
	}

	#right #kd_bar{
		float:right;
	}

	.death_big {
		width:37.5px;
		margin-top:9px;
	}

	#observed_player .t #observed_username{
		color:#c19511;
	}

	#observed_player .ct #observed_username{
		color:#73afd6;
	}

	#observed_player {
		width: 488px;
		height: 127px;
		position: fixed;
		bottom: 100px;
		left: 716px;
		background-color: rgba(0, 0, 0, 0.3);
	}

	#obs_left {
		float:left;
		width:30%;
	}

	#obs_left img{
        width:80%;
		margin:0;
		border:5px solid;
	}

	#obs_right {
		float:right;
		width:70%;
	}

	#observed_name, #observed_country, #observed_bottombar, #observed_border {
		float:left;
	}

	#observed_username{
		width:100%;
		font-size:26.25px;
		height:37px;
		padding-top:10px;
	}

	#obstext {
		float:left;
		max-width:205px;
		max-height:81px;
		overflow:hidden;
	}

	#obsteamimg, #observed_bottombar .rk, #observed_bottombar .sm {
		float:right;		
	}

	#obsteamimg{
		margin-right:-15.5px;
	}
    
    #obsteamimg img{
    	opacity:0;
		width:70%;
	}

	#observed_bottombar .rk, #observed_bottombar .sm {
		margin-top:0px;
		margin-right:10px;
	}

	#observed_bottombar .sm {
		color:#add28b;
	}

	#observed_name{
		width:100%;
		font-size:18px;
		height:27px;
		padding-bottom:10px;
		margin-top:-12px;
	}

	#observed_name span{
		float:left;
		width:60%;
	}

	#obs_nades {
		width:30%;
		height:27px;
		float:right;
		margin-right:25px;
	}

	#obs_nades img {
		height:20px;
		float:right;
		margin:3px 3px 3px 3px;
	}
	
	#observed_country img{
        height:30px;
		margin-right:10px;
		margin-top:6px;
	}

	#observed_border {
		border-image-slice: 1;
        border-width: 2px;
		border-top:10px solid;
		width: 365px;
		margin-left: -24px;
	}

	#observed_bottombar {
		padding-top:10px;
		font-size:15px;
		height:27.5px;
		width:100%;		
	}
	
	#observed_bottombar .sk, #observed_bottombar .sa {
		margin-right:20px;
	}

	#observed_killfeed {
		height:127px;
		width:35px;
		margin-left:10px;
		background-color: rgba(0, 0, 0, 0.3);
		bottom: 100px;
		left: 1204px;
		position: absolute;
	}	

	#observed_killfeed img {
		height:25px;
		float:right;
		margin-right: 6px;
	}

	#observed_health {
		font-size:41px;
		padding:2.5px 0 2.5px 15px;
		position:fixed;
		bottom:0px;
		left:0px;
		float:left;
		width:650px;
		background: linear-gradient(to right, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0));
	}

	#observed_health > *{
		float:left;
	}
/* ... */

